# robotic_vision

./: .gitignore  README.md  fly.py  holo_fly.py
object_tracking/: CMakeLists.txt  Kalman_with_camShift.cpp  TODO.txt  bgSubtract.cpp  camShift.cpp  camshiftdemo.cpp  klt_example.cpp  klt_track.cpp  main.cpp
optical_flow/: fly.py  simple_pid.py
visual_odom/: CMakeLists.txt  disparity.py  map_area.cpp  stereo_odom.cpp  stereo_odom.h  take_pics.cpp  visual_odom.cpp  visual_odom.h  vo.cpp
